@@ -644,6 +644,12 @@ Other Changes
 
   Closes #6414
 
+
+* Fix false positives for ``no-name-in-module`` and ``import-error`` for ``numpy.distutils``
+  and ``pydantic``.
+
+  Closes #6497
+
 * Fix ``IndexError`` crash in ``uninferable_final_decorators`` method.
 
  Relates to #6531
